# chess-engine

./: Cargo.toml  LICENSE
benches/: my_benchmark.rs
src/: lib.rs  main.rs
src/engine/: engine.rs  mod.rs
src/engine/magic/: BMagicTable.json  RMagicTable.json  magic.rs  mod.rs
src/engine/models/: board.rs  mod.rs  move.rs  piece.rs  state.rs  undo.rs  zobrist.rs
src/engine/movegen/: mod.rs  movegen.rs
src/engine/search/: evaluation.rs  mod.rs  search.rs
src/utils/: bit_operations.rs  mod.rs  string_format.rs
tests/: perft.rs
