[package]
name = "chess-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
console = "0.16.2"
lazy_static = "1.5.0"
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
stats_alloc = "0.1.10"

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "my_benchmark"
harness = false

[[test]]
name = "tests"
path = "tests/perft.rs"

[lib]
name = "lib"
path = "src/lib.rs"
